# otus_project

./: README.md
catalog_service/app/: main.py  rm_client.py  (+1 more)
grafana/: dashboard.json
hotel_service/: pyproject.toml
hotel_service/app/: main.py  rm_client.py  utils.py
hotel_service/app/models/: __init__.py  hotel_orders.py
hotel_service/app/schemas/: order.py
hw_6_chart/: Chart.yaml  values.yaml
hw_8_chart/: Chart.yaml  values.yaml
hw_9_chart/: Chart.yaml  values.yaml
hw_chart/: Chart.yaml  values.yaml
order_service/: pyproject.toml
payment_service/: Dockerfile  pyproject.toml
tests/: otus_hw.postman_collection.json  otus_hw_6.postman_collection.json  otus_hw_8.postman_collection.json  otus_hw_9.postman_collection.json  otus_hw_catalog.postman_collection.json
user_service/: pyproject.toml
user_service/app/: jwt.py  main.py  rm_client.py  storage.py  user_utils.py
user_service/app/forms/: user.py
user_service/app/migrations/: env.py
user_service/app/migrations/versions/: 45b76b6e1784_modify_order_service.py  5c09d4320e14_hotel_service.py  7936e085d3f8_add_order.py  97960180282d_catalog_service.py  9ebd91a453ec_ticket_service.py  a67f3eba898b_added_required_tables.py  bad992d0eda3_pyment_service.py  bafa6af1c9cf_add_password.py  bd844dcb70b4_notify_service.py  f3997c2fba30_modify_order_service.py
user_service/app/models/: __init__.py  catalog.py  notify_orders.py  orders.py  user.py
user_service/app/schemas/: user.py
user_service/app/templates/: login.jinja2  profile.jinja2  registration.jinja2
user_service/app/utils/: user.py
(+79 files in other folders)
