[tool.poetry]
name = "otus_hw_5"
version = "0.1.0"
description = ""
authors = ["Volodina Elena <elena.volodina@zyfra.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"
alembic = "^1.8.1"
pydantic = {extras = ["email"], version = "^1.9.2"}
asyncpg = "^0.26.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.40"}
psycopg2-binary = "^2.9.3"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
Authlib = "^1.1.0"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
